--- a/package.json
+++ b/package.json
@@ -1,73 +1,77 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^34.0.0",
-    "@ckeditor/ckeditor5-react": "^5.0.0",
-    "@fortawesome/fontawesome-svg-core": "^1.3.0",
-    "@fortawesome/free-solid-svg-icons": "^6.0.0",
-    "@fortawesome/react-fontawesome": "^0.1.17",
-    "@uiw/react-md-editor": "^3.12.1",
-    "@wiris/mathtype-ckeditor5": "^7.28.0",
-    "axios": "^0.21.1",
-    "base64-arraybuffer": "^1.0.1",
-    "dates-generator": "^1.0.4",
-    "font-awesome": "^4.7.0",
-    "gh-pages": "^3.2.3",
-    "json-server": "^0.17.0",
-    "katex": "^0.15.3",
-    "mathquill4quill": "^2.3.0",
-    "moment": "^2.29.1",
-    "nanoid": "^3.1.30",
-    "quill": "^1.3.7",
-    "quill-mathlive-blot": "^1.5.0",
-    "react": "^17.0.2",
-    "react-aws-s3": "^1.5.0",
-    "react-circular-progressbar": "^2.0.4",
-    "react-dom": "^17.0.2",
-    "react-donut-chart": "^1.2.0",
-    "react-drag-listview": "^0.1.9",
-    "react-dropdown": "^1.9.2",
-    "react-dropzone": "^11.4.2",
-    "react-file-drop": "^3.1.2",
-    "react-mathquill": "^1.0.2",
-    "react-modal": "^3.15.1",
-    "react-quill": "^1.3.5",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
-    "react-select": "^5.3.1",
-    "react-toastify": "^8.2.0",
-    "react-tooltip": "^4.2.21",
-    "styled-components": "^5.3.3"
-  },
-  "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start && npx tailwindcss -i ./src/index.css -o ./public/index.css --watch",
-    "build": "react-scripts --max_old_space_size=4096 build",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "tailwindcss": "^3.0.23"
-  }
+	"name": "my-app",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@ckeditor/ckeditor5-build-classic": "^34.0.0",
+		"@ckeditor/ckeditor5-react": "^5.0.0",
+		"@emotion/react": "^11.11.0",
+		"@fortawesome/fontawesome-svg-core": "^1.3.0",
+		"@fortawesome/free-solid-svg-icons": "^6.0.0",
+		"@fortawesome/react-fontawesome": "^0.1.17",
+		"@mantine/core": "^6.0.11",
+		"@mantine/hooks": "^6.0.11",
+		"@tabler/icons-react": "^2.19.0",
+		"@uiw/react-md-editor": "^3.12.1",
+		"@wiris/mathtype-ckeditor5": "^7.28.0",
+		"axios": "^0.21.1",
+		"base64-arraybuffer": "^1.0.1",
+		"dates-generator": "^1.0.4",
+		"font-awesome": "^4.7.0",
+		"gh-pages": "^3.2.3",
+		"json-server": "^0.17.0",
+		"katex": "^0.15.3",
+		"mathquill4quill": "^2.3.0",
+		"moment": "^2.29.1",
+		"nanoid": "^3.1.30",
+		"quill": "^1.3.7",
+		"quill-mathlive-blot": "^1.5.0",
+		"react": "^17.0.2",
+		"react-aws-s3": "^1.5.0",
+		"react-circular-progressbar": "^2.0.4",
+		"react-dom": "^17.0.2",
+		"react-donut-chart": "^1.2.0",
+		"react-drag-listview": "^0.1.9",
+		"react-dropdown": "^1.9.2",
+		"react-dropzone": "^11.4.2",
+		"react-file-drop": "^3.1.2",
+		"react-mathquill": "^1.0.2",
+		"react-modal": "^3.15.1",
+		"react-quill": "^1.3.5",
+		"react-router-dom": "^5.3.0",
+		"react-scripts": "4.0.3",
+		"react-select": "^5.3.1",
+		"react-toastify": "^8.2.0",
+		"react-tooltip": "^4.2.21",
+		"styled-components": "^5.3.3"
+	},
+	"scripts": {
+		"start": "react-scripts start && npx tailwindcss -i ./src/index.css -o ./public/index.css --watch",
+		"build": "react-scripts --max_old_space_size=4096 build",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"tailwindcss": "^3.0.23"
+	}
 }
