--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
 		"styled-components": "^5.3.3"
 	},
 	"scripts": {
-		"start": "react-scripts start && npx tailwindcss -i ./src/index.css -o ./public/index.css --watch",
+		"start": "PORT=3021 react-scripts start && npx tailwindcss -i ./src/index.css -o ./public/index.css --watch",
 		"build": "react-scripts --max_old_space_size=4096 build",
 		"predeploy": "npm run build",
 		"deploy": "gh-pages -d build",
