--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"moment": "^2.29.1",
 		"nanoid": "^3.1.30",
 		"quill": "^1.3.7",
+		"quill-image-compress": "^1.2.30",
 		"quill-mathlive-blot": "^1.5.0",
 		"react": "^17.0.2",
 		"react-aws-s3": "^1.5.0",
